syntax = "proto3";

option java_package = "com.ljh.clientdemo.proto";
option java_outer_classname = "MessageBase";

// protoc --java_out=src/main/java src/main/java/com/ljh/clientdemo/proto/Message.proto
// TODO: 过期协议，等待删除

enum RequestType{
    NORMAL = 0;             // 常规业务消息
    HEARTBEAT_REQUEST = 1;  // 客户端心跳信息
    HEARTBEAT_RESPONSE = 2; // 服务端心跳信息

    DATE = 3;               // 获取当前的日期
}

message Message{
    string requestId = 1;
    string content = 2;
    int32 result = 3;
    int64 userId = 4;

    RequestType type = 5;
}